src/test/ui/argument-suggestions/missing_arguments.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:10:3
   |
LL |   one_arg();
   |   ^^^^^^^-- supplied 0 arguments
   |   |
   |   expected 1 argument
   |
note: function defined here
  --> $DIR/missing_arguments.rs:1:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------

error[E0061]: this function takes 2 arguments but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:14:3
   |
LL |   two_same(               );
   |   ^^^^^^^^----------------- supplied 0 arguments
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:2:4
   |
LL | fn two_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:15:3
   |
LL |   two_same(   1           );
   |   ^^^^^^^^    - supplied 1 argument
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:2:4
   |
LL | fn two_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 2 arguments but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:16:3
   |
LL |   two_diff(               );
   |   ^^^^^^^^----------------- supplied 0 arguments
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:17:3
   |
LL |   two_diff(   1           );
   |   ^^^^^^^^    - supplied 1 argument
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:18:3
   |
LL |   two_diff(          1.0  );
   |   ^^^^^^^^           --- supplied 1 argument
   |   |
   |   expected 2 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:3:4
   |
LL | fn two_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------

error[E0061]: this function takes 3 arguments but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:21:3
   |
LL |   three_same(                       );
   |   ^^^^^^^^^^------------------------- supplied 0 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------

error[E0061]: this function takes 3 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:22:3
   |
LL |   three_same(   1                   );
   |   ^^^^^^^^^^    - supplied 1 argument
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:23:3
   |
LL |   three_same(   1,      1           );
   |   ^^^^^^^^^^    -       - supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:4:4
   |
LL | fn three_same(_a: i32, _b: i32, _c: i32) {}
   |    ^^^^^^^^^^ -------  -------  -------

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:26:3
   |
LL |   three_diff(          1.0,     ""  );
   |   ^^^^^^^^^^           ---      -- supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:27:3
   |
LL |   three_diff(   1,              ""  );
   |   ^^^^^^^^^^    -               -- supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:28:3
   |
LL |   three_diff(   1,     1.0          );
   |   ^^^^^^^^^^    -      --- supplied 2 arguments
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:29:3
   |
LL |   three_diff(                   ""  );
   |   ^^^^^^^^^^                    -- supplied 1 argument
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:30:3
   |
LL |   three_diff(          1.0          );
   |   ^^^^^^^^^^           --- supplied 1 argument
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 3 arguments but 1 argument was supplied
  --> $DIR/missing_arguments.rs:31:3
   |
LL |   three_diff(   1                   );
   |   ^^^^^^^^^^    - supplied 1 argument
   |   |
   |   expected 3 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:5:4
   |
LL | fn three_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------

error[E0061]: this function takes 4 arguments but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:34:3
   |
LL |   four_repeated(                               );
   |   ^^^^^^^^^^^^^--------------------------------- supplied 0 arguments
   |   |
   |   expected 4 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:6:4
   |
LL | fn four_repeated(_a: i32, _b: f32, _c: f32, _d: &str) {}
   |    ^^^^^^^^^^^^^ -------  -------  -------  --------

error[E0061]: this function takes 4 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:35:3
   |
LL |   four_repeated(   1,                     ""   );
   |   ^^^^^^^^^^^^^    -                      -- supplied 2 arguments
   |   |
   |   expected 4 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:6:4
   |
LL | fn four_repeated(_a: i32, _b: f32, _c: f32, _d: &str) {}
   |    ^^^^^^^^^^^^^ -------  -------  -------  --------

error[E0061]: this function takes 5 arguments but 0 arguments were supplied
  --> $DIR/missing_arguments.rs:38:3
   |
LL |   complex(                               );
   |   ^^^^^^^--------------------------------- supplied 0 arguments
   |   |
   |   expected 5 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:7:4
   |
LL | fn complex(_a: i32, _b: f32, _c: i32, _d: f32, _e: &str) {}
   |    ^^^^^^^ -------  -------  -------  -------  --------

error[E0061]: this function takes 5 arguments but 2 arguments were supplied
  --> $DIR/missing_arguments.rs:39:3
   |
LL |   complex(   1,                     ""   );
   |   ^^^^^^^    -                      -- supplied 2 arguments
   |   |
   |   expected 5 arguments
   |
note: function defined here
  --> $DIR/missing_arguments.rs:7:4
   |
LL | fn complex(_a: i32, _b: f32, _c: i32, _d: f32, _e: &str) {}
   |    ^^^^^^^ -------  -------  -------  -------  --------

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0061`.
